Replaced links with https

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,6 +6,7 @@ annotation.processing.source.output=${build.generated.sources.dir}/ap-source-out
 ant.customtasks.libs=JWSAntTasks
 application.title=Bending
 application.vendor=John
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,8 +27,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/Bending.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=\
-    ${java.home}/lib/javaws.jar
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.21-src=../../../../Downloads/mysql-connector-java-5.1.21/mysql-connector-java-5.1.21/src
 includes=**
@@ -40,8 +40,8 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -63,7 +63,7 @@ jnlp.applet.height=300
 jnlp.applet.width=300
 jnlp.codebase.type=local
 jnlp.descriptor=application
-jnlp.enabled=true
+jnlp.enabled=false
 jnlp.mixed.code=trusted_only
 jnlp.offline-allowed=false
 jnlp.signed=true
@@ -71,6 +71,10 @@ jnlp.signing=key
 jnlp.signing.alias=Bending
 jnlp.signing.keystore=C:\\Users\\John\\Documents\\yay.key
 main.class=destruct.APPLET
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
