--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,4 +6,4 @@ javac.debug=true
 javadoc.preview=true
 jnlp.signing.keypass=19john95
 jnlp.signing.storepass=19john95
-user.properties.file=C:\\Users\\Family\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\johnj\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
