--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.johnwesthoff.bending.game</groupId>
+  <groupId>com.johnwesthoff.bending</groupId>
   <artifactId>bending</artifactId>
   <version>1.1-SNAPSHOT</version>
   <properties>
@@ -46,7 +46,7 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>com.johnwesthoff.bending.game.Client</mainClass>
+              <mainClass>com.johnwesthoff.bending.Client</mainClass>
             </manifest>
           </archive>
         </configuration>
