--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,18 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+  
+    <dependency>
+      <groupId>com.jtransc</groupId>
+      <artifactId>jtransc-rt</artifactId>
+      <version>0.5.0-ALPHA4</version>
+    </dependency>
+  
+    <dependency>
+      <groupId>com.jtransc</groupId>
+      <artifactId>jtransc-rt</artifactId>
+      <version>0.5.0-ALPHA4</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -109,6 +121,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
       </plugin>
+      <!--
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -176,6 +189,7 @@
           </execution>
         </executions>
       </plugin>
+      -->
     </plugins>
   </build>
   <reporting>
