--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit.version>5.6.0</junit.version>
+    <assert4j.version>3.21.0</assert4j.version>
+    <mockito.version>3.12.4</mockito.version>
     <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
     <maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
     <checkstyle.version>8.29</checkstyle.version>
@@ -35,7 +37,19 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
-  
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>${assert4j.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>com.jtransc</groupId>
       <artifactId>jtransc-rt</artifactId>
